--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,3 @@
-/* .debug header {
-    background-color: bisque;
-    width: 100%;
-} */
-
-/* .debug header > nav > .row > div {
-    background-color: olive;
-    border: 2px dashed black;
-} */
-
 .debug #logo-mobile {
     width: 50px;
 }
@@ -16,6 +6,27 @@
     width: 120px;
 }
 
-.debug header nav {
+.debug header {
+    
+}
+
+.debug header {
+    height: 70px;
     background-color: darkcyan;
+}
+
+.debug .aside >div:first-child {
+    height: calc(100vh - 80px);
+}
+
+.debug .aside  {
+    background-color: darkmagenta;
+}
+
+.debug .main-header  {
+    background-color: yellow;
+}
+
+.debug .main-header > div  {
+    border: 1px dashed black;
 }
