--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .debug #logo-mobile, #class{
-    width: 50px;
+    width: 45px;
 }
 
 .debug #logo {
@@ -16,12 +16,28 @@
 
 .debug header {
     height: 70px;
-    background-color: darkcyan;
+    background-color: rgb(242, 242, 242);
+}
+
+.barra {
+    background-color: rgb(215, 215, 215);
 }
 
 .debug .aside  {
-    background-color: darkmagenta;
+    background-color: #061E34;
+    background-image: url('../img/sidebar-bg.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
     max-height: calc(100vh - 70px);
+}
+
+.debug .aside a {
+    color: white;
+}
+
+.debug .aside .nav-item:hover {
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
 .debug .main-header  {
