offcanvas fatto, ma non soddisfatto

--- a/css/style.css
+++ b/css/style.css
@@ -59,3 +59,11 @@ header {
     color: white;
 }
 
+.form-control {
+    border-color: 1px solid black;
+}
+
+:root{
+    --bs-offcanvas-width: 100vw;
+}
+
