--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,3 +1,16 @@
+.offcanvas.offcanvas-end {
+    width: 100vw;
+}
+
+
+.compilazione > input {
+    width: 100%;
+    border: 1px solid #dee2e6;
+    border-radius: 6px;
+    height: 38px;
+}
+
+
 /* // Small devices (landscape phones, 576px and up) */
 @media screen and (min-width: 576px) { 
 
@@ -5,12 +18,21 @@
 
 /* // Medium devices (tablets, 768px and up) */
 @media screen and (min-width: 768px) { 
+    .nome, .email, .password {
+        width: calc(100% / 2);
+        }
+
+    .dove-abito {
+        width: calc((100% / 3));
+    }
 
 }
 
 /* // Large devices (desktops, 992px and up) */
 @media screen and (min-width: 992px) { 
-
+    .offcanvas.offcanvas-end {
+        width: 50vw;
+    }
 }
 
 /* // X-Large devices (large desktops, 1200px and up) */
